# wiki-search

./: .gitignore  Cargo.toml  Makefile  README.org
src/: cli.rs  config.rs  index.rs  main.rs  page.rs  reindexer.rs  search.rs  server.rs  util.rs  wiki.rs
src/server/: api.rs  front.rs  handler.rs
src/server/front/: fragment.rs  ui.rs
src/wiki/: textify.rs  textify_parsed.rs
static/: index.html  style.css
