[package]
name = "wiki-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
futures-util = "0.3.28"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio", "sqlite"] }
tantivy = "0.20.2"
tantivy-jieba = "0.9.0"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["macros", "sync", "time"] }
