[package]
name = "wiki-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive", "env"] }
derive_more = "0.99.17"
futures-util = "0.3.28"
http = "0.2.9"
hyper = "0.14.27"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tantivy = "0.20.2"
tantivy-jieba = "0.9.0"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["macros", "sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = { version = "0.15.0", optional = true }

[features]
default = ["dotenv"]
